--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,16 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Template created using create-react-app"
+      content="Yuliia Panchenko Portfolio. Frontend Developer."
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- //TODO POINT -->
-    <!-- Add font family here and delete family=Poppins -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-    <title>App Template</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
