add helmets to all pages + resize images

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Yuliia Panchenko Portfolio. Frontend Developer."
+      content="Frontend developer portfolio Yuliia Panchenko. Web developer portfolio. Ukraine, Kyiv."
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-    <title>Portfolio</title>
+    <title>Portfolio Yuliia Panchenko</title>
   </head>
   <body>
     <div id="root"></div>
